@@ -480,6 +480,24 @@ name|server
 operator|.
 name|namenode
 operator|.
+name|EditLogFileOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|namenode
+operator|.
 name|FSImage
 import|;
 end_import
@@ -884,6 +902,16 @@ specifier|static
 name|CacheManipulator
 name|prevCacheManipulator
 decl_stmt|;
+static|static
+block|{
+name|EditLogFileOutputStream
+operator|.
+name|setShouldSkipFsyncForTesting
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Before
 DECL|method|setUp ()
