@@ -560,6 +560,24 @@ name|hdfs
 operator|.
 name|server
 operator|.
+name|namenode
+operator|.
+name|EditLogFileOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
 name|datanode
 operator|.
 name|fsdataset
@@ -799,6 +817,16 @@ specifier|private
 name|CacheManipulator
 name|prevCacheManipulator
 decl_stmt|;
+static|static
+block|{
+name|EditLogFileOutputStream
+operator|.
+name|setShouldSkipFsyncForTesting
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Before
 DECL|method|setup ()
@@ -3162,6 +3190,12 @@ name|entryPrefix
 init|=
 literal|"/party-"
 decl_stmt|;
+name|long
+name|prevId
+init|=
+operator|-
+literal|1
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -3177,6 +3211,8 @@ name|i
 operator|++
 control|)
 block|{
+name|prevId
+operator|=
 name|dfs
 operator|.
 name|addPathBasedCacheDirective
@@ -3500,6 +3536,46 @@ name|dit
 operator|.
 name|hasNext
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|long
+name|nextId
+init|=
+name|dfs
+operator|.
+name|addPathBasedCacheDirective
+argument_list|(
+operator|new
+name|PathBasedCacheDirective
+operator|.
+name|Builder
+argument_list|()
+operator|.
+name|setPath
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/foobar"
+argument_list|)
+argument_list|)
+operator|.
+name|setPool
+argument_list|(
+name|pool
+argument_list|)
+operator|.
+name|build
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|prevId
+operator|+
+literal|1
+argument_list|,
+name|nextId
 argument_list|)
 expr_stmt|;
 block|}
